--- a/index.html
+++ b/index.html
@@ -74,14 +74,14 @@
                             </li>
                             <li class="nav-item dropdown header-profile">
                                 <a class="nav-link" href="#" role="button" data-toggle="dropdown">
-                                    <i class="mdi mdi-account"></i>
+                                    <img src="/images/avatar/1.png" alt="">
                                 </a>
                                 <div class="dropdown-menu dropdown-menu-right">
                                     <a href="./app-profile.html" class="dropdown-item">
                                         <i class="icon-user"></i>
                                         <span class="ml-2">Settings </span>
                                     </a>
-                                    <a href="./page-login.html" class="dropdown-item">
+                                    <a href="./login.html" class="dropdown-item">
                                         <i class="icon-key"></i>
                                         <span class="ml-2">Logout </span>
                                     </a>
@@ -111,11 +111,11 @@
                     <li><a class="has-arrow" href="javascript:void()" aria-expanded="false"><i class="icon icon-single-04"></i><span
                                 class="nav-text">My Profile</span></a>
                         <ul aria-expanded="false">
-                            <li><a href="./profile.html">View Profile</a></li>
-                            <li><a href="javascript:void()">Edit Profile</a></li>
+                            <li><a href="profile.html">View Profile</a></li>
+                            <li><a href="edit-profile.html">Edit Profile</a></li>
                         </ul>
                     </li>
-                    <li><a class="" href="javascript:void()" aria-expanded="false"><i class="icon icon-single-04"></i><span
+                    <li><a class="" href="albums.html" aria-expanded="false"><i class="icon icon-single-04"></i><span
                                 class="nav-text">My Albums</span></a>
                     </li>
                     
@@ -154,8 +154,7 @@
                             <div class="stat-widget-two card-body">
                                 <div class="stat-content">
                                     <div class="stat-text">Number of Albums </div>
-                                    <div class="stat-digit float-left">5</div>
-                                    <div class="stat-digit float-right"><i class="icon icon-single-04"></i></div>
+                                    <div class="stat-digit">5</div>
                                 </div>
                             </div>
                         </div>
@@ -165,8 +164,7 @@
                             <div class="stat-widget-two card-body">
                                 <div class="stat-content">
                                     <div class="stat-text">Number of Songs </div>
-                                    <div class="stat-digit float-left">52</div>
-                                    <div class="stat-digit float-right"><i class="icon icon-single-04"></i></div>
+                                    <div class="stat-digit">52</div>
                                 </div>
                             </div>
                         </div>
@@ -176,8 +174,7 @@
                             <div class="stat-widget-two card-body">
                                 <div class="stat-content">
                                     <div class="stat-text">Number of Active Notifications </div>
-                                    <div class="stat-digit float-left">15</div>
-                                    <div class="stat-digit float-right"><i class="icon icon-single-04"></i></div>
+                                    <div class="stat-digit">15</div>
                                 </div>
                             </div>
                         </div>
@@ -204,14 +201,6 @@
             Footer end
         ***********************************-->
 
-        <!--**********************************
-           Support ticket button start
-        ***********************************-->
-
-        <!--**********************************
-           Support ticket button end
-        ***********************************-->
-
 
     </div>
     <!--**********************************
@@ -225,6 +214,7 @@
     <script src="./vendor/global/global.min.js"></script>
     <script src="./js/quixnav-init.js"></script>
     <script src="./js/custom.min.js"></script>
+    <script src="https://geodata.solutions/includes/countrystatecity.js"></script>
 
 
 </body>
