--- a/register.html
+++ b/register.html
@@ -377,7 +377,7 @@
                                         </div>
                                     </form>
                                     <div class="new-account mt-3">
-                                        <p>Already have an account? <a class="text-primary" href="page-login.html">Sign in</a></p>
+                                        <p>Already have an account? <a class="text-primary" href="login.html">Sign in</a></p>
                                     </div>
                                 </div>
                             </div>
@@ -393,7 +393,7 @@
     ***********************************-->
     <!-- Required vendors -->
     <script src="./vendor/global/global.min.js"></script>
-        <script src="https://geodata.solutions/includes/countrystatecity.js"></script>
+    <script src="https://geodata.solutions/includes/countrystatecity.js"></script>
     <script src="./js/quixnav-init.js"></script>
     <!--endRemoveIf(production)-->
 </body>
