--- a/index.html
+++ b/index.html
@@ -8,7 +8,13 @@
     <title>AltarBell</title>
     <!-- Favicon icon -->
     <link rel="icon" type="image/png" sizes="16x16" href="https://provider.altarbell.com/images/favicon.png">
+    <link href="./vendor/datatables/css/jquery.dataTables.min.css" rel="stylesheet">
     <link href="./css/style.css" rel="stylesheet">
+
+    <!-- Font Awesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css"
+        integrity="sha512-YWzhKL2whUzgiheMoBFwW8CKV4qpHQAEuvilg9FAn5VJUDwKZZxkJNuGM4XkWuk94WCrrwslk8yWNGmY1EduTA=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
 
 </head>
 
@@ -39,10 +45,9 @@
         ***********************************-->
         <div class="nav-header">
             <a href="index.html" class="brand-logo">
-                <img src="https://altarbell.com/img/altarbellwhite.8e790a6c.png" width="200" alt="">
-                <!-- <img class="logo-abbr" src="./images/logo.png" alt=""> -->
-                <!-- <img class="logo-compact" src="./images/logo-text.png" alt=""> -->
-                <!-- <img class="brand-title" src="./images/logo-text.png" alt=""> -->
+                <img class="logo-abbr" src="./images/logo.png" alt=""> 
+                <img class="logo-compact" src="./images/logotext.png" alt="">
+                <img class="brand-title" src="./images/logotext.png" alt="">
             </a>
 
             <div class="nav-control">
@@ -77,10 +82,6 @@
                                     <img src="/images/avatar/1.png" alt="">
                                 </a>
                                 <div class="dropdown-menu dropdown-menu-right">
-                                    <a href="./app-profile.html" class="dropdown-item">
-                                        <i class="icon-user"></i>
-                                        <span class="ml-2">Settings </span>
-                                    </a>
                                     <a href="./login.html" class="dropdown-item">
                                         <i class="icon-key"></i>
                                         <span class="ml-2">Logout </span>
@@ -115,7 +116,7 @@
                             <li><a href="edit-profile.html">Edit Profile</a></li>
                         </ul>
                     </li>
-                    <li><a class="" href="albums.html" aria-expanded="false"><i class="icon icon-single-04"></i><span
+                    <li><a class="" href="albums.html" aria-expanded="false"><i class="fas fa-book-open"></i><span
                                 class="nav-text">My Albums</span></a>
                     </li>
                     
