--- a/profile.html
+++ b/profile.html
@@ -10,6 +10,12 @@
     <link rel="icon" type="image/png" sizes="16x16" href="https://provider.altarbell.com/images/favicon.png">
     <link href="./css/style.css" rel="stylesheet">
 
+    <!-- Font Awesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css"
+        integrity="sha512-YWzhKL2whUzgiheMoBFwW8CKV4qpHQAEuvilg9FAn5VJUDwKZZxkJNuGM4XkWuk94WCrrwslk8yWNGmY1EduTA=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+
+
 </head>
 
 <body>
@@ -39,10 +45,9 @@
         ***********************************-->
         <div class="nav-header">
             <a href="index.html" class="brand-logo">
-                <img src="https://altarbell.com/img/altarbellwhite.8e790a6c.png" width="200" alt="">
-                <!-- <img class="logo-abbr" src="./images/logo.png" alt=""> -->
-                <!-- <img class="logo-compact" src="./images/logo-text.png" alt=""> -->
-                <!-- <img class="brand-title" src="./images/logo-text.png" alt=""> -->
+                <img class="logo-abbr" src="./images/logo.png" alt="">
+                <img class="logo-compact" src="./images/logotext.png" alt="">
+                <img class="brand-title" src="./images/logotext.png" alt="">
             </a>
         
             <div class="nav-control">
@@ -74,13 +79,9 @@
                             </li>
                             <li class="nav-item dropdown header-profile">
                                 <a class="nav-link" href="#" role="button" data-toggle="dropdown">
-                                    <img src="images/avatar/1.png" alt="">
+                                    <img src="/images/avatar/1.png" alt="">
                                 </a>
                                 <div class="dropdown-menu dropdown-menu-right">
-                                    <a href="./app-profile.html" class="dropdown-item">
-                                        <i class="icon-user"></i>
-                                        <span class="ml-2">Settings </span>
-                                    </a>
                                     <a href="./login.html" class="dropdown-item">
                                         <i class="icon-key"></i>
                                         <span class="ml-2">Logout </span>
@@ -116,7 +117,7 @@
                                 <li><a href="edit-profile.html">Edit Profile</a></li>
                             </ul>
                         </li>
-                        <li><a class="" href="albums.html" aria-expanded="false"><i class="icon icon-single-04"></i><span
+                        <li><a class="" href="albums.html" aria-expanded="false"><i class="fas fa-book-open"></i><span
                                     class="nav-text">My Albums</span></a>
                         </li>
                 
