--- a/register.html
+++ b/register.html
@@ -45,6 +45,7 @@
                                                         <option value="Mr">Mr</option>
                                                         <option value="Mrs">Mrs</option>
                                                         <option value="Miss">Miss</option>
+                                                        <option value="Dr">Dr</option>
                                                         <option value="Reverend">Reverend</option>
                                                         <option value="Pastor">Pastor</option>
                                                         <option value="Bishop">Bishop</option>
@@ -362,13 +363,13 @@
                                             <div class="col-md-6">
                                                 <div class="form-group">
                                                     <label><strong>Password</strong></label>
-                                                    <input type="password" class="form-control">
+                                                    <input type="password" class="form-control" required>
                                                 </div>
                                             </div>
                                             <div class="col-md-6">
                                                 <div class="form-group">
                                                     <label><strong>Confirm Password</strong></label>
-                                                    <input type="password" class="form-control">
+                                                    <input type="password" class="form-control" required>
                                                 </div>
                                             </div>
                                         </div>
