--- a/edit-profile.html
+++ b/edit-profile.html
@@ -484,9 +484,10 @@
                           <label><strong>Address</strong></label>
                           <textarea class="form-control" rows="2" id="comment"></textarea>
                         </div>
-                        <div class="mb-3">
-                          <label for="formFile" class="form-label">upload profile</label>
-                          <input class="form-control" type="file" id="formFile">
+                        <label>Art Album</label>
+                        <div class="drop-zone">
+                          <span class="drop-zone__prompt">Drop file here or click to upload</span>
+                          <input type="file" name="myFile" class="drop-zone__input">
                         </div>
                           
                           <div class="text-center mt-4">
