--- a/profile.html
+++ b/profile.html
@@ -184,42 +184,42 @@
                                 <div class="profile-personal-info">
                                     <h4 class="text-primary mb-4">Personal Information</h4>
                                     <div class="row mb-4">
-                                        <div class="col-4">
-                                            <h6 class="f-w-500">Name <span class="pull-right">:</span>
+                                        <div class="col-5">
+                                            <h6 class="f-w-500">Name
                                             </h6>
                                         </div>
-                                        <div class="col-8"><span>Mitchell C.Shay</span>
+                                        <div class="col-7"><span>Mitchell C.Shay</span>
                                         </div>
                                     </div>
                                     <div class="row mb-4">
-                                        <div class="col-4">
-                                            <h6 class="f-w-500">Email <span class="pull-right">:</span>
+                                        <div class="col-5">
+                                            <h6 class="f-w-500">Email
                                             </h6>
                                         </div>
-                                        <div class="col-8"><span>example@examplel.com</span>
+                                        <div class="col-7"><span>example@examplel.com</span>
                                         </div>
                                     </div>
                                     <div class="row mb-4">
-                                        <div class="col-4">
-                                            <h6 class="f-w-500">Phone <span class="pull-right">:</span>
+                                        <div class="col-5">
+                                            <h6 class="f-w-500">Phone
                                             </h6>
                                         </div>
-                                        <div class="col-8"><span>07058373227</span>
+                                        <div class="col-7"><span>07058373227</span>
                                         </div>
                                     </div>
                                     <div class="row mb-4">
-                                        <div class="col-4">
-                                            <h6 class="f-w-500">Location <span class="pull-right">:</span></h6>
+                                        <div class="col-5">
+                                            <h6 class="f-w-500">Location</h6>
                                         </div>
-                                        <div class="col-8"><span>Rosemont Avenue Melbourne,
+                                        <div class="col-7"><span>Rosemont Avenue Melbourne,
                                                 Florida</span>
                                         </div>
                                     </div>
                                     <div class="row mb-4">
-                                        <div class="col-4">
-                                            <h6 class="f-w-500">Organization <span class="pull-right">:</span></h6>
+                                        <div class="col-5">
+                                            <h6 class="f-w-500">Organization</h6>
                                         </div>
-                                        <div class="col-8"><span>Beasky Sounds</span>
+                                        <div class="col-7"><span>Beasky Sounds</span>
                                         </div>
                                     </div>
                                 </div>
