--- a/profile.html
+++ b/profile.html
@@ -196,7 +196,7 @@
                                             <h6 class="f-w-500">Email
                                             </h6>
                                         </div>
-                                        <div class="col-7"><span>example@examplel.com</span>
+                                        <div class="col-7"><span>example@example.com</span>
                                         </div>
                                     </div>
                                     <div class="row mb-4">
