--- a/albums.html
+++ b/albums.html
@@ -117,7 +117,7 @@
           <div class="col-sm-6 p-md-0 justify-content-sm-end mt-2 mt-sm-0 d-flex">
             <div class="bootstrap-modal">
               <!-- Button trigger modal --> <button type="button" class="btn btn-primary" data-toggle="modal"
-                data-target="#basicModal">Add a New Album</button> <!-- Modal -->
+                data-target="#basicModal">Add New Album</button> <!-- Modal -->
               <div class="modal fade" id="basicModal">
                 <div class="modal-dialog" role="document">
                   <div class="modal-content">
