--- a/Admin/categories.html
+++ b/Admin/categories.html
@@ -109,7 +109,7 @@
           <li><a class="" href="categories.html" aria-expanded="false"><i class="fas fa-cog"></i><span
                 class="nav-text">Categories</span></a>
           </li>
-          <li><a class="" href="javascript:void()" aria-expanded="false"><i class="fas fa-user"></i><span
+          <li><a class="" href="providers.html" aria-expanded="false"><i class="fas fa-user"></i><span
                 class="nav-text">Providers</span></a>
           </li>
           <li><a class="" href="javascript:void()" aria-expanded="false"><i class="far fa-user"></i><span
@@ -187,9 +187,6 @@
         <div class="row">
           <div class="col-12">
             <div class="card">
-              <div class="card-header">
-                <h4 class="card-title">Basic Datatable</h4>
-              </div>
               <div class="card-body">
                 <div class="table-responsive">
                   <table id="example" class="display" style="min-width: 845px">
