--- a/Admin/index.html
+++ b/Admin/index.html
@@ -109,7 +109,7 @@
           <li><a class="" href="categories.html" aria-expanded="false"><i class="fas fa-cog"></i><span
                 class="nav-text">Categories</span></a>
           </li>
-          <li><a class="" href="javascript:void()" aria-expanded="false"><i class="fas fa-user"></i><span
+          <li><a class="" href="providers.html" aria-expanded="false"><i class="fas fa-user"></i><span
                 class="nav-text">Providers</span></a>
           </li>
           <li><a class="" href="javascript:void()" aria-expanded="false"><i class="far fa-user"></i><span
