--- a/create-advert.html
+++ b/create-advert.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <title>Album Preview | Altarbell Provider </title> <!-- Favicon icon -->
+  <title>Create Advert | Altarbell Provider </title> <!-- Favicon icon -->
   <link rel="icon" type="image/png" sizes="16x16" href="https://provider.altarbell.com/images/favicon.png">
   <!-- Datatable -->
   <link href="./vendor/datatables/css/jquery.dataTables.min.css" rel="stylesheet">
