--- a/index.html
+++ b/index.html
@@ -150,10 +150,12 @@
                     <div class="col-lg-4 col-sm-6">
                         <div class="card">
                             <div class="stat-widget-two card-body">
-                                <div class="stat-content">
-                                    <div class="stat-text">Number of Albums </div>
-                                    <div class="stat-digit">5</div>
-                                </div>
+                                <a href="albums.html">
+                                    <div class="stat-content">
+                                        <div class="stat-text">Number of Albums </div>
+                                        <div class="stat-digit">5</div>
+                                    </div>
+                                </a>
                             </div>
                         </div>
                     </div>
