--- a/manage-advert.html
+++ b/manage-advert.html
@@ -122,39 +122,14 @@
                           <div class="modal-dialog" role="document">
                             <div class="modal-content">
                               <div class="modal-header">
-                                <h5 class="modal-title">Advert Info</h5> <button type="button" class="close"
+                                <h5 class="modal-title">Approve Advert</h5> <button type="button" class="close"
                                   data-dismiss="modal"><span>&times;</span> </button>
                               </div>
                               <div class="modal-body">
-                                <form action="#">
-                                  <div class="form-group"> <label><strong>Title</strong></label> <input type="text" class="form-control"
-                                      required> </div>
-                                  <div class="form-group"> <label>Category</label> <select class="form-control" id="edit_category_id"
-                                      name="category_id">
-                                      <option selected disabled>Select an option</option>
-                                      <option value="f07bd2e0-8d61-11eb-8cc2-ddcda0409cde">DayStar</option>
-                                      <option value="bba59210-8d65-11eb-9961-f1adc705818a">Winners</option>
-                                      <option value="a1b8a600-8d6a-11eb-aab9-01f5fe73ba89">Inspiration</option>
-                                      <option value="aebc3b00-8d6a-11eb-b813-d3663504d461">Motivation</option>
-                                      <option value="7679aee0-8e19-11eb-94dd-b740c2f2042c">Devotional</option>
-                                      <option value="852e2ba0-8e19-11eb-9901-b7e3c91fb310">Leadership</option>
-                                      <option value="95122c60-8e19-11eb-912c-67d36d532929">Business &amp; Career</option>
-                                      <option value="a2843f60-8e19-11eb-8dec-f302d9d336be">Faith</option>
-                                      <option value="ad4f2740-8e19-11eb-b3a8-71af97f275b0">Finance</option>
-                                      <option value="8121b180-8e1a-11eb-980d-07c6f0942ed1">Health</option>
-                                      <option value="90401520-8e1a-11eb-abb2-1508ecb90b10">Praise &amp; Worship</option>
-                                      <option value="4775a960-8e22-11eb-a48e-4b0a3faeffcf">Redeemed</option>
-                                      <option value="0e62f990-a384-11eb-afdf-81f12e60b259">Sermon</option>
-                                    </select> </div>
-                                  <label>Art Album</label>
-                                  <div class="drop-zone">
-                                    <span class="drop-zone__prompt">Drop file here or click to upload</span>
-                                    <input type="file" name="myFile" class="drop-zone__input">
-                                  </div>
-                                </form>
+                                <p>Are you sure you want to approve this advert?</p>
                               </div>
-                              <div class="modal-footer"> <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                                <button type="button" class="btn btn-primary">Save changes</button>
+                              <div class="modal-footer"> <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+                                <button type="button" class="btn btn-primary">Yes</button>
                               </div>
                             </div>
                           </div>
@@ -169,35 +144,35 @@
                                   data-dismiss="modal"><span>&times;</span> </button>
                               </div>
                               <div class="modal-body">
+                                <p>Are you sure you want to decline this advert?</p>
+                              </div>
+                              <div class="modal-footer"> <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                                <button type="button" class="btn btn-primary">Yes</button>
+                              </div>
+                            </div>
+                          </div>
+                        </div>
+
+
+                        <!-- View more advert --> 
+                        <div class="modal fade" id="moreModal">
+                          <div class="modal-dialog" role="document">
+                            <div class="modal-content">
+                              <div class="modal-header">
+                                <h5 class="modal-title">Decline Advert</h5> <button type="button" class="close"
+                                  data-dismiss="modal"><span>&times;</span> </button>
+                              </div>
+                              <div class="modal-body">
                                 <form action="#">
-                                  <div class="form-group"> <label><strong>Title</strong></label> <input type="text"
-                                      value="Heavy is the head" class="form-control" required> </div>
-                                  <div class="form-group"> <label>Category</label> <select class="form-control" id="edit_category_id"
-                                      name="category_id">
-                                      <option selected disabled>Select an option</option>
-                                      <option value="f07bd2e0-8d61-11eb-8cc2-ddcda0409cde">DayStar</option>
-                                      <option value="bba59210-8d65-11eb-9961-f1adc705818a">Winners</option>
-                                      <option value="a1b8a600-8d6a-11eb-aab9-01f5fe73ba89">Inspiration</option>
-                                      <option value="aebc3b00-8d6a-11eb-b813-d3663504d461">Motivation</option>
-                                      <option value="7679aee0-8e19-11eb-94dd-b740c2f2042c">Devotional</option>
-                                      <option value="852e2ba0-8e19-11eb-9901-b7e3c91fb310">Leadership</option>
-                                      <option value="95122c60-8e19-11eb-912c-67d36d532929">Business &amp; Career</option>
-                                      <option value="a2843f60-8e19-11eb-8dec-f302d9d336be">Faith</option>
-                                      <option value="ad4f2740-8e19-11eb-b3a8-71af97f275b0">Finance</option>
-                                      <option value="8121b180-8e1a-11eb-980d-07c6f0942ed1">Health</option>
-                                      <option value="90401520-8e1a-11eb-abb2-1508ecb90b10">Praise &amp; Worship</option>
-                                      <option value="4775a960-8e22-11eb-a48e-4b0a3faeffcf">Redeemed</option>
-                                      <option value="0e62f990-a384-11eb-afdf-81f12e60b259">Sermon</option>
-                                    </select>
-                                    <small>leave blank to maintain the current category</small>
+                                  <div class="form-group"> <label><strong>Advert</strong></label> <input type="text" value="Heavy is the head" class="form-control" required> </div>
+                                  <div class="form-group"> <label>Feature</label> <input type="text" class="form-control" value="feature of advert">
                                   </div>
-                    
-                                  <div class="mb-3"> <label for="formFile" class="form-label">Album Art</label> <input class="form-control"
-                                      type="file" id="formFile"> </div>
+                                  <div class="form-group"> <label>Date Added</label> <input type="text" class="form-control" value="16 April 2021">
+                                  </div>
                                 </form>
                               </div>
                               <div class="modal-footer"> <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                                <button type="button" class="btn btn-primary">Save changes</button>
+                                <button type="button" class="btn btn-primary">Yes</button>
                               </div>
                             </div>
                           </div>
@@ -228,7 +203,8 @@
                         <td>Paranoid</td>
                         <td>Beerbongs &amp; Bentlys</td>
                         <td>April 27</td>
-                        <td class="color-primary"><a href="#" class="badge badge-primary">view more</a> 
+                        <td class="color-primary"><a href="#" class="badge badge-primary" data-toggle="modal"
+                          data-target="#moreModal">view more</a> 
                           <a href="javascript:void()"class="badge badge-danger mr-1 text-white" data-toggle="modal"
                           data-target="#editModal">decline</a>
                           <a href="javascript:void()" class="badge badge-success text-white" data-toggle="modal"
