--- a/sweeralert.html
+++ b/sweeralert.html
@@ -318,7 +318,7 @@
         ***********************************-->
         <div class="footer">
             <div class="copyright">
-                <p>Copyright © Designed &amp; Developed by <a href="#" target="_blank">Quixkit</a> 2019</p>
+                <p>Copyright © 2021 <a href="https://nqb8.co/" target="_blank">NQB8 Group.</a> All Rights Reserved</p>
             </div>
         </div>
         <!--**********************************
