--- a/card-details.html
+++ b/card-details.html
@@ -111,7 +111,7 @@
         <div class="row page-titles mx-0">
           <div class="col-sm-6 p-md-0">
             <div class="welcome-text">
-              <h4>card details</h4>
+              <h4>Card Details</h4>
             </div>
           </div>
 
@@ -119,13 +119,13 @@
         </div> <!-- row -->
         <div class="row d-flex justify-content-center align-items-center">
           <div class="col-md-6">
-            <span>Caldholder name:</span>
+            <h6>Caldholder name:</h6>
             <div class="card">
               <div class="card-body">
                 <span>John Doe</span>
               </div>
             </div>
-            <span>Card number:</span>
+            <h6>Card number:</h6>
             <div class="card">
               <div class="card-body">
                 <img src="https://upload.wikimedia.org/wikipedia/commons/a/a4/Mastercard_2019_logo.svg" width="50" alt=""><span class="mx-3">2345 2394 0847 3478</span>
@@ -133,7 +133,7 @@
             </div>
             <div class="row">
               <div class="col-md-6">
-                <span>Expiry Date:</span>
+                <h6>Expiry Date:</h6>
                 <div class="card">
                   <div class="card-body">
                     <span>11/22</span>
@@ -141,7 +141,7 @@
                 </div>
               </div>
               <div class="col-md-6">
-                <span>CVV</span>
+                <h6>CVV</h6>
                 <div class="card">
                   <div class="card-body">
                     <span>754</span>
