--- a/sounds.html
+++ b/sounds.html
@@ -223,7 +223,7 @@
                         <th>Title</th>
                         <th>Album</th>
                         <th>Date added</th>
-                        <th><i class="far fa-clock"></i></th>
+                        <th>Last Updated</th>
                       </tr>
                     </thead>
                     <tbody>
@@ -232,7 +232,7 @@
                         <td> <img src="https://d1csarkz8obe9u.cloudfront.net/posterpreviews/cold-night-album-cover-design-template-f4373773b6a4babb5a33af50b3f4725e.jpg?ts=1615898184" width="30" class="img-fluid mr-3" alt=""> Paranoid</td>
                         <td>Beerbongs &amp; Bentlys</td>
                         <td>April 27</td>
-                        <td class="color-primary">3:42</td>
+                        <td class="color-primary">19 hours ago</td>
                       </tr>
                       <tr>
                         <th>2</th>
@@ -241,7 +241,7 @@
                           width="30" class="img-fluid mr-3" alt="">Spoil My Night</td>
                         <td>Beerbongs &amp; Bentlys</td>
                         <td>April 27</td>
-                        <td class="color-success">3:15</td>
+                        <td>19 hours ago</td>
                       </tr>
                       <tr>
                         <th>3</th>
@@ -250,7 +250,7 @@
                           width="30" class="img-fluid mr-3" alt="">Rich &amp; Sad</td>
                         <td>Beerbongs &amp; Bentlys</td>
                         <td>April 27</td>
-                        <td class="color-danger">3:26</td>
+                        <td>19 hours Ago</td>
                       </tr>
                     </tbody>
                   </table>
