--- a/card-details.html
+++ b/card-details.html
@@ -122,13 +122,13 @@
             <h6>Caldholder name:</h6>
             <div class="card">
               <div class="card-body">
-                <span>John Doe</span>
+                <p>John Doe</p>
               </div>
             </div>
             <h6>Card number:</h6>
             <div class="card">
               <div class="card-body">
-                <img src="https://upload.wikimedia.org/wikipedia/commons/a/a4/Mastercard_2019_logo.svg" width="50" alt=""><span class="mx-3">2345 2394 0847 3478</span>
+                <img src="https://upload.wikimedia.org/wikipedia/commons/a/a4/Mastercard_2019_logo.svg" width="50" alt=""><p class="mx-3">2345 2394 0847 3478</p>
               </div>
             </div>
             <div class="row">
@@ -136,7 +136,7 @@
                 <h6>Expiry Date:</h6>
                 <div class="card">
                   <div class="card-body">
-                    <span>11/22</span>
+                    <p>11/22</p>
                   </div>
                 </div>
               </div>
@@ -144,7 +144,7 @@
                 <h6>CVV</h6>
                 <div class="card">
                   <div class="card-body">
-                    <span>754</span>
+                    <p>754</p>
                   </div>
                 </div>
               </div>
