--- a/edit-profile.html
+++ b/edit-profile.html
@@ -455,36 +455,27 @@
                           <div class="col-lg-4">
                             <div class="form-group">
                               <label>Country</label>
-                              <select class="form-control js-example-basic-single w-100 countries order-alpha" id="countryId"
-                                name="country" required>
-                                <option></option>
-                              </select>
+                              <input type="text" class="form-control" value="Nigeria">
                             </div>
                           </div>
                           <div class="col-lg-4">
                             <div class="form-group">
                               <label>State</label>
-                              <select class="form-control js-example-basic-single w-100 states order-alpha" id="stateId"
-                                name="state" required>
-                                <option></option>
-                              </select>
+                              <input type="text" class="form-control" value="Lagos">
                             </div>
                           </div>
                           <div class="col-lg-4">
                             <div class="form-group">
                               <label>City</label>
-                              <select class="form-control js-example-basic-single w-100 cities order-alpha" id="cityId"
-                                name="city" required>
-                                <option></option>
-                              </select>
+                              <input type="text" class="form-control" value="Surulere">
                             </div>
                           </div>
                         </div>
                         <div class="form-group">
                           <label><strong>Address</strong></label>
-                          <textarea class="form-control" rows="2" id="comment"></textarea>
+                          <textarea class="form-control" rows="5" id="comment"></textarea>
                         </div>
-                        <label>Art Album</label>
+                        <label><strong>Art Album</strong></label>
                         <div class="drop-zone">
                           <span class="drop-zone__prompt">Drop file here or click to upload</span>
                           <input type="file" name="myFile" class="drop-zone__input">
