--- a/profile.html
+++ b/profile.html
@@ -188,7 +188,7 @@
                                             <h6 class="f-w-500">Name
                                             </h6>
                                         </div>
-                                        <div class="col-7"><span>Mitchell C.Shay</span>
+                                        <div class="col-7"><p>Mitchell C.Shay</p>
                                         </div>
                                     </div>
                                     <div class="row mb-4">
@@ -196,7 +196,7 @@
                                             <h6 class="f-w-500">Email
                                             </h6>
                                         </div>
-                                        <div class="col-7"><span>example@example.com</span>
+                                        <div class="col-7"><p>example@example.com</p>
                                         </div>
                                     </div>
                                     <div class="row mb-4">
@@ -204,22 +204,22 @@
                                             <h6 class="f-w-500">Phone
                                             </h6>
                                         </div>
-                                        <div class="col-7"><span>07058373227</span>
+                                        <div class="col-7"><p>07058373227</p>
                                         </div>
                                     </div>
                                     <div class="row mb-4">
                                         <div class="col-5">
                                             <h6 class="f-w-500">Location</h6>
                                         </div>
-                                        <div class="col-7"><span>Rosemont Avenue Melbourne,
-                                                Florida</span>
+                                        <div class="col-7"><p>Rosemont Avenue Melbourne,
+                                                Florida</p>
                                         </div>
                                     </div>
                                     <div class="row mb-4">
                                         <div class="col-5">
                                             <h6 class="f-w-500">Organization</h6>
                                         </div>
-                                        <div class="col-7"><span>Beasky Sounds</span>
+                                        <div class="col-7"><p>Beasky Sounds</p>
                                         </div>
                                     </div>
                                 </div>
