--- a/Provider-list.html
+++ b/Provider-list.html
@@ -144,148 +144,50 @@
             </div>
           </div>
         </div>
-        <!-- row -->
+
         <div class="row">
-          <div class="col-md-12">
-            <div class="card">
-              <div class="card-body">
-                <div class="row mb-4">
-                <div class="col-md-6 my-3">
-                  <img src="http://www.monotsuites.com/assets/pages/media/profile/profile_user.jpg" class="img-fluid profile-img"
-                    alt="profile image">
-                </div>
-                <div class="col-md-6 my-3">
-                  <h4 class="text-primary mb-4">Personal Information</h4>
-                  <h5><strong>Name</strong></h5>
-                  <p>Mitchell C.Shay</p>
-                  <h5><strong>Email</strong></h5>
-                  <p>email@yahoo.com</p>
-                  <h5><strong>Phone</strong></h5>
-                  <p>+234 70 2123 4553</p>
-                  <h5><strong>Location</strong></h5>
-                  <p>Nigeria, Lagos</p>
-                </div>
-              </div>
-              <div class="row m-5">
-                <div class="col-md-8 my-5">
-                  <img src="https://img.freepik.com/free-psd/furniture-facebook-cover-web-banner-template_237398-329.jpg?size=626&ext=jpg" class="img-fluid" alt="">
-                </div>
-                <div class="col-md-4">
-                  <h4 class="text-primary">Advert Information</h4>
-                  <h5><strong>Category</strong></h5>
-                  <p>Motivation</p>
-                  <h5><strong>Title</strong></h5>
-                  <p>Title here</p>
-                  <h5><strong>Content</strong></h5>
-                  <p>Content here</p>
-                  <h5><strong>URL</strong></h5>
-                  <p>https://url.com</p>
-                  <h5><strong>Start Date</strong></h5>
-                  <p>Janaury, 15, 2022</p>
-                  <h5><strong>Duration</strong></h5>
-                  <p>2 Weeks</p>
-                  <h5><strong>Targeted Views</strong></h5>
-                  <p>1,000</p>
-                </div>
-              </div>
-              <div class="row float-right">
-                <!-- Button trigger modal --> 
-                <button type="button" class="btn btn-primary" data-toggle="modal"
-                  data-target="#approveModal">Approve</button> 
-                <button type="button" class="btn btn-danger mx-2" data-toggle="modal" data-target="#declineModal">decline</button>
-              </div>
-            </div>
-          </div>
+          beasky
         </div>
+
       </div>
-
-
-      <!-- Approve Modal -->
-      <div class="modal fade" id="approveModal">
-        <div class="modal-dialog" role="document">
-          <div class="modal-content">
-            <div class="modal-header">
-              <h5 class="modal-title">Approve Advert</h5> <button type="button" class="close"
-                data-dismiss="modal"><span>&times;</span> </button>
-            </div>
-            <div class="modal-body">
-              <p>Are you sure you want to approve advert?</p>
-            </div>
-            <div class="modal-footer"> <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-              <button type="button" class="btn btn-primary">Approve Advert</button>
-            </div>
-          </div>
-        </div>
-      </div>
-
-
-
-
-      <!-- Decline Modal -->
-      <div class="modal fade" id="declineModal">
-        <div class="modal-dialog" role="document">
-          <div class="modal-content">
-            <div class="modal-header">
-              <h5 class="modal-title">Decline Advert</h5> <button type="button" class="close"
-                data-dismiss="modal"><span>&times;</span> </button>
-            </div>
-            <div class="modal-body">
-              <p>Are you sure you want to decline advert?</p>
-              <form action="#">
-                <div class="form-group">
-                  <label for="reasons"><strong>Reasons</strong></label>
-                  <textarea class="form-control" name="" id="" cols="30" rows="7"></textarea>
-                </div>
-              </form>
-            </div>
-            <div class="modal-footer"> <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-              <button type="button" class="btn btn-primary">Decline Advert</button>
-            </div>
-          </div>
-        </div>
-      </div>
-
-
-
-    </div>
-    <!--**********************************
+      <!--**********************************
             Content body end
         ***********************************-->
 
 
-    <!--**********************************
+      <!--**********************************
             Footer start
         ***********************************-->
-    <div class="footer">
-      <div class="copyright">
-        <p>Copyright © 2021 <a href="https://nqb8.co/" target="_blank">NQB8 Group.</a> All Rights Reserved</p>
+      <div class="footer">
+        <div class="copyright">
+          <p>Copyright © 2021 <a href="https://nqb8.co/" target="_blank">NQB8 Group.</a> All Rights Reserved</p>
+        </div>
       </div>
-    </div>
-    <!--**********************************
+      <!--**********************************
             Footer end
         ***********************************-->
 
-    <!--**********************************
+      <!--**********************************
            Support ticket button start
         ***********************************-->
 
-    <!--**********************************
+      <!--**********************************
            Support ticket button end
         ***********************************-->
 
 
-  </div>
-  <!--**********************************
+    </div>
+    <!--**********************************
         Main wrapper end
     ***********************************-->
 
-  <!--**********************************
+    <!--**********************************
         Scripts
     ***********************************-->
-  <!-- Required vendors -->
-  <script src="./vendor/global/global.min.js"></script>
-  <script src="./js/quixnav-init.js"></script>
-  <script src="./js/custom.min.js"></script>
+    <!-- Required vendors -->
+    <script src="./vendor/global/global.min.js"></script>
+    <script src="./js/quixnav-init.js"></script>
+    <script src="./js/custom.min.js"></script>
 
 
 </body>
