--- a/edit-profile.html
+++ b/edit-profile.html
@@ -454,19 +454,19 @@
                         <div class="form-row">
                           <div class="col-lg-4">
                             <div class="form-group">
-                              <label>Country</label>
+                              <label><strong>Country</strong></label>
                               <input type="text" class="form-control" value="Nigeria">
                             </div>
                           </div>
                           <div class="col-lg-4">
                             <div class="form-group">
-                              <label>State</label>
+                              <label><strong>State</strong></label>
                               <input type="text" class="form-control" value="Lagos">
                             </div>
                           </div>
                           <div class="col-lg-4">
                             <div class="form-group">
-                              <label>City</label>
+                              <label><strong>City</strong></label>
                               <input type="text" class="form-control" value="Surulere">
                             </div>
                           </div>
