--- a/view-sounds.html
+++ b/view-sounds.html
@@ -188,7 +188,7 @@
                       </div>
                       <div class="music-list">
                         <div class="headers">
-                          <div class="row">
+                          <div class="rows">
                             <i class="list material-icons">queue_music</i>
                             <span class="text-dark">Music list</span>
                           </div>
